[gd_scene load_steps=4 format=3 uid="uid://c3jrufvytiisi"]

[ext_resource type="PackedScene" uid="uid://qfeote6xliei" path="res://ui/crafting/recipe_display.tscn" id="1_86lxb"]
[ext_resource type="Script" path="res://ui/crafting/crafting_panel.gd" id="1_a3lcv"]
[ext_resource type="PackedScene" uid="uid://crbhr0q1bap4a" path="res://ui/crafting/recipe_button.tscn" id="2_sjwtk"]

[node name="CraftingPanel" type="HSplitContainer"]
custom_minimum_size = Vector2(648, 300)
split_offset = 245
script = ExtResource("1_a3lcv")
recipe_button_scene = ExtResource("2_sjwtk")

[node name="RecipeList" type="PanelContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="RecipeList"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="RecipeList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="RecipeList/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DisplayedRecipe" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DisplayedRecipe"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="DisplayedRecipe/MarginContainer"]
layout_mode = 2

[node name="RecipeName" type="Label" parent="DisplayedRecipe/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Crafting NULL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="DisplayedRecipe/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipeDisplay" parent="DisplayedRecipe/MarginContainer/VBoxContainer" instance=ExtResource("1_86lxb")]
layout_mode = 2

[node name="Spacer2" type="Control" parent="DisplayedRecipe/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CraftButton" type="Button" parent="DisplayedRecipe/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Craft!"

[connection signal="recipe_item_hovered" from="DisplayedRecipe/MarginContainer/VBoxContainer/RecipeDisplay" to="." method="_on_recipe_display_recipe_item_hovered"]
[connection signal="recipe_item_unhovered" from="DisplayedRecipe/MarginContainer/VBoxContainer/RecipeDisplay" to="." method="_on_recipe_display_recipe_item_unhovered"]
[connection signal="pressed" from="DisplayedRecipe/MarginContainer/VBoxContainer/CraftButton" to="." method="_on_craft_button_pressed"]
